Wed Apr  8 23:11:22 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * examples/Hello/descriptors/DeploymentPlan.cdp:

          Removed some unicode characters that may be causing problems
          on some platforms. 
        
Wed Apr  8 18:14:30 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Containers/Servant_Activator.cpp:

          I'm not sure the absent port activator is an error, changing it to
          a warning.  I'll investigate later.

Wed Apr  8 05:09:48 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/Porting_Hints.txt:

          Reformatted the document so that the text wraps around the
          80th column.

Tue Apr  7 14:40:41 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:

          Fuzz error.

Tue Apr  7 14:37:18 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/NodeManager-Deployments/simple_nm_launcher.cpp:

          Compile error.

Mon Apr  6 18:18:58 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/Name_Utilities.cpp:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:

          Stab at a fix for a memory corruption during deployment.

Mon Apr  6 13:26:08 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:

          Fixed compile error.

Sun Apr  5 20:34:22 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/NodeManager-Deployments/nm_launcher.mpc:

          Changed parent from ciao_logger to dance_logger.

        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:

          Properly check if _var is nil.

Sat Apr  4 15:30:13 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:
          Fix fuzz errors.

Sat Apr  4 03:39:28 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
